# database-importer

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyinstaller.spec  pyproject.toml  requirements-lock.txt  requirements.txt
dbimport/: __main__.py  importer.py  util.py  window.py
tests/: test_importer.py  test_util.py
